--- a/nginx/project.conf
+++ b/nginx/project.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name WebApp;
+    server_name minskin.store www.minskin.store;
 
     location / {
         proxy_pass http://flask_app:5000;
